test/cases/compile_errors/invalid_field_access_in_comptime.zig
comptime { var x = doesnt_exist.whatever; _ = x; }

// error
// backend=stage2
// target=native
//
// :1:20: error: use of undeclared identifier 'doesnt_exist'
